--- a/.github/workflows/Sync.yml
+++ b/.github/workflows/Sync.yml
@@ -1,4 +1,4 @@
-name: 'Sync Github Repos To Gitee by https://blog.csdn.net/nuptaxin/article/details/124565474'
+name: '同步至 Gitee - Sync to Gitee'
 
 on:
   push:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
 
-    - name: '名字随便起'
+    - name: '同步环节'
       uses: Yikun/hub-mirror-action@v1.1  # 使用Yikun/hub-mirror-action
       with:
         src: github/diaowinner  # 源端账户名(github)
@@ -21,5 +21,5 @@ jobs:
         clone_style: "https"  # 使用https方式进行clone，也可以使用ssh
         debug: true  # 启用后会显示所有执行命令
         force_update: true  # 启用后，强制同步，即强制覆盖目的端仓库
-        static_list: "k8x12j"  # 静态同步列表，在此填写需要同步的仓库名称，可填写多个
+        static_list: "MuzaiPixel"  # 静态同步列表，在此填写需要同步的仓库名称，可填写多个
         timeout: '600s'  # git超时设置，超时后会自动重试git操作
